--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,19 @@
 body {
   background-color: lightgreen;
   font-family: sans-serif;
-  margin-left: 7%;
+  margin-left: 5%;
   padding-bottom: 10px;
-  width: 86%;
+  width: 90%;
+}
+
+p {
   float: none;
-  clear: both;
+  padding-left: 5px;
+}
+
+li {
+  float: none;
+  width: 95%;
 }
 
 #header {
